Renamed objective `error` to `scorer`

--- a/docs/guide/search_space.ipynb
+++ b/docs/guide/search_space.ipynb
@@ -384,7 +384,7 @@
       "Completed 100% [====================]\n",
       "saving final population as archive...\n",
       "Best model: If(x_0>0.50,If(x_0>1.50,8.22,5.77),9.04)\n",
-      "score: 0.005547027478181699\n"
+      "score: 0.005547027354798839\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
     "est = BrushRegressor(\n",
     "    functions=user_ops,\n",
     "    max_gens=20,\n",
-    "    objectives=[\"error\", \"linear_complexity\"],\n",
+    "    objectives=[\"scorer\", \"linear_complexity\"],\n",
     "    weights_init=True,\n",
     "    bandit=\"dynamic_thompson\",\n",
     "    verbosity=1\n",
@@ -418,19 +418,19 @@
      "text": [
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.1347899, 0.42220494], \"ArrayB\": [0.0915509, 0.41956714], \"ArrayF\": [0.01, 0.014537098]}\n",
-      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.50947785\n",
-      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.52286035\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.12932986\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.22320744\n",
-      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.5294247\n",
-      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.2962465\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.6646117\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.733612\n",
-      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.13904911\n",
-      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.23858666\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.10248854\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.03489412\n",
+      "terminal_weights: {\"ArrayI\": [0.5988976, 0.39022964], \"ArrayB\": [0.31329083, 0.29768455], \"ArrayF\": [0.01, 0.01]}\n",
+      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.4727218\n",
+      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.13049549\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.2557611\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.44342086\n",
+      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.079836436\n",
+      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.26834965\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.978205\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.54717386\n",
+      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.13805643\n",
+      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.22573847\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.09722547\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.01\n",
       "\n"
      ]
     }
@@ -449,8 +449,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If(x_0>0.50)\n",
-      "|- If(x_0>1.50)\n",
+      "If(x_0)\n",
+      "|- If(x_0)\n",
       "|  |- 8.22\n",
       "|  |- 5.77\n",
       "|- 9.04\n"
