Updated notebook outputs

--- a/docs/guide/search_space.ipynb
+++ b/docs/guide/search_space.ipynb
@@ -219,18 +219,12 @@
      "text": [
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
-      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
-      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "terminal_weights: {\"ArrayI\": [0.016013855, 0.016013855], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
       "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
       "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
       "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
@@ -271,17 +265,11 @@
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
       "terminal_weights: {\"ArrayI\": [1, 1], \"ArrayB\": [1, 1], \"ArrayF\": [1, 1]}\n",
-      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
-      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
       "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
       "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
       "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
@@ -325,18 +313,12 @@
      "text": [
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
-      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
-      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "terminal_weights: {\"ArrayI\": [0.016013855, 0.016013855], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
       "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
       "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
       "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
@@ -383,8 +365,8 @@
      "text": [
       "Completed 100% [====================]\n",
       "saving final population as archive...\n",
-      "Best model: If(x_0>0.50,If(x_0>1.50,8.22,5.77),9.04)\n",
-      "score: 0.005547027354798839\n"
+      "Best model: If(x_0>0.50,If(x_0>1.50,If(x_0>2.50,If(x_0>991.50,8.53,8.22),9.18),5.77),9.04)\n",
+      "score: 0.006386309031210291\n"
      ]
     }
    ],
@@ -418,19 +400,13 @@
      "text": [
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.5988976, 0.39022964], \"ArrayB\": [0.31329083, 0.29768455], \"ArrayF\": [0.01, 0.01]}\n",
-      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.4727218\n",
-      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.13049549\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.2557611\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.44342086\n",
-      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.079836436\n",
-      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.26834965\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.978205\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.54717386\n",
-      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.13805643\n",
-      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.22573847\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.09722547\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.01\n",
+      "terminal_weights: {\"ArrayI\": [0.26122442, 0.89121705], \"ArrayB\": [0.79961514, 0.34149784], \"ArrayF\": [0.31632814, 0.58380014]}\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.21997896\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.5239252\n",
+      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.36014962\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.3266917\n",
+      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.9564706\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.6078548\n",
       "\n"
      ]
     }
@@ -449,9 +425,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If(x_0)\n",
-      "|- If(x_0)\n",
-      "|  |- 8.22\n",
+      "If(x_0>0.50)\n",
+      "|- If(x_0>1.50)\n",
+      "|  |- If(x_0>2.50)\n",
+      "|  |  |- If(x_0>991.50)\n",
+      "|  |  |  |- 8.53\n",
+      "|  |  |  |- 8.22\n",
+      "|  |  |- 9.18\n",
       "|  |- 5.77\n",
       "|- 9.04\n"
      ]
