Updated notebook outputs

--- a/docs/guide/search_space.ipynb
+++ b/docs/guide/search_space.ipynb
@@ -220,12 +220,12 @@
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
       "terminal_weights: {\"ArrayI\": [0.016013855, 0.016013855], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
     }
@@ -265,12 +265,12 @@
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
       "terminal_weights: {\"ArrayI\": [1, 1], \"ArrayB\": [1, 1], \"ArrayF\": [1, 1]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
     }
@@ -314,12 +314,12 @@
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
       "terminal_weights: {\"ArrayI\": [0.016013855, 0.016013855], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
     }
@@ -365,8 +365,8 @@
      "text": [
       "Completed 100% [====================]\n",
       "saving final population as archive...\n",
-      "Best model: If(x_0>0.50,If(x_0>1.50,If(x_0>2.50,If(x_0>991.50,8.53,8.22),9.18),5.77),9.04)\n",
-      "score: 0.006386309031210291\n"
+      "Best model: If(x_0>0.50,If(x_0>1.50,If(x_0>2.50,8.22,9.18),5.77),9.04)\n",
+      "score: 0.00630746302159968\n"
      ]
     }
    ],
@@ -400,13 +400,13 @@
      "text": [
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.26122442, 0.89121705], \"ArrayB\": [0.79961514, 0.34149784], \"ArrayF\": [0.31632814, 0.58380014]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.21997896\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.5239252\n",
-      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.36014962\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.3266917\n",
-      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.9564706\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.6078548\n",
+      "terminal_weights: {\"ArrayI\": [0.41190568, 0.39858475], \"ArrayB\": [0.4027645, 0.33387676], \"ArrayF\": [0.6055765, 0.3164766]}\n",
+      "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.3405632\n",
+      "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.14749911\n",
+      "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.53965676\n",
+      "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.50452554\n",
+      "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.66620094\n",
+      "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.7313078\n",
       "\n"
      ]
     }
@@ -428,9 +428,7 @@
       "If(x_0>0.50)\n",
       "|- If(x_0>1.50)\n",
       "|  |- If(x_0>2.50)\n",
-      "|  |  |- If(x_0>991.50)\n",
-      "|  |  |  |- 8.53\n",
-      "|  |  |  |- 8.22\n",
+      "|  |  |- 8.22\n",
       "|  |  |- 9.18\n",
       "|  |- 5.77\n",
       "|- 9.04\n"
@@ -468,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
