Fixes brush freezing when all nodes are fixed. rename skip_leaves

--- a/docs/guide/saving_loading_populations.ipynb
+++ b/docs/guide/saving_loading_populations.ipynb
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
     "print(est.best_estimator_.get_model())\n",
     "print(est.best_estimator_.fitness)\n",
     "\n",
-    "est.partial_fit(X, y, lock_nodes_depth=2, skip_leaves=True)\n",
+    "est.partial_fit(X, y, lock_nodes_depth=2, keep_leaves_unlocked=True)\n",
     "\n",
     "print(est.best_estimator_.get_model())\n",
     "print(est.best_estimator_.fitness)"
