Improving archive interface and class_weights on model selection
Several improvements. This is a work in progress.
- class_weights can be user defined, unbalanced, or balanced by support.
it is easier now to define these values.
- archive is not serialized anymore, making it easier to predict from
archive. with this change, I removed hyperparameters related to enabling
archive, as it is easier to just save the entire population and archive
at the end of the run.
- removed predict_archive and predict_proba_archive, just access the
indivudlas directly. I expect that interface will be simpler now.
- bunch of new test cases. there is one that is still failing, I am
working on it.
- final model selection will also match the class weights specified,
so if the user asks for the smallest on the confidence interval, then
it should still work.

--- a/docs/guide/search_space.ipynb
+++ b/docs/guide/search_space.ipynb
@@ -180,10 +180,10 @@
    "outputs": [],
    "source": [
     "user_ops = {\n",
-    "    # 'Add': 0.5,\n",
-    "    # 'Sub': 0.5,\n",
-    "    # 'Mul': 1.0,\n",
-    "    # 'Div': 0.1,\n",
+    "    'Add': 0.5,\n",
+    "    'Sub': 0.5,\n",
+    "    'Mul': 1.0,\n",
+    "    'Div': 0.1,\n",
     "    'SplitBest':0.1,\n",
     "    'SplitOn':0.1\n",
     "}\n",
@@ -218,14 +218,22 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.016013855, 0.016013855], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
+      "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
       "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
       "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
       "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "Div node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "Mul node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Mul] = 1.00*Mul, weight = 1\n",
       "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "Sub node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "Add node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Add] = 1.00*Add, weight = 0.5\n",
       "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "Div node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "Mul node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
       "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "Sub node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "Add node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
       "\n"
      ]
     }
@@ -263,14 +271,22 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [1, 1], \"ArrayB\": [1, 1], \"ArrayF\": [1, 1]}\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
+      "terminal_weights: {\"ArrayI\": [1, 1], \"ArrayB\": [1], \"ArrayF\": [1, 1]}\n",
       "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
       "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
       "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "Div node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "Mul node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Mul] = 1.00*Mul, weight = 1\n",
       "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "Sub node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "Add node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Add] = 1.00*Add, weight = 0.5\n",
       "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "Div node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "Mul node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
       "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "Sub node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "Add node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
       "\n"
      ]
     }
@@ -312,14 +328,22 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.016013855, 0.016013855], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
+      "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
       "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
       "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
       "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "Div node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "Mul node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Mul] = 1.00*Mul, weight = 1\n",
       "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "Sub node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "Add node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Add] = 1.00*Add, weight = 0.5\n",
       "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "Div node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
+      "Mul node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
       "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "Sub node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
+      "Add node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
       "\n"
      ]
     }
@@ -364,9 +388,8 @@
      "output_type": "stream",
      "text": [
       "Completed 100% [====================]\n",
-      "saving final population as archive...\n",
-      "Best model: If(x_0>0.50,If(x_0>1.50,If(x_0>2.50,8.22,9.18),5.77),9.04)\n",
-      "score: 0.00630746302159968\n"
+      "Best model: If(x_0>=1.00,Sub(8.32,0.00*x_0),9.04)\n",
+      "score: 0.003572196870614497\n"
      ]
     }
    ],
@@ -399,14 +422,22 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.41190568, 0.39858475], \"ArrayB\": [0.4027645, 0.33387676], \"ArrayF\": [0.6055765, 0.3164766]}\n",
-      "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.3405632\n",
-      "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.14749911\n",
-      "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.53965676\n",
-      "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.50452554\n",
-      "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.66620094\n",
-      "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.7313078\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
+      "terminal_weights: {\"ArrayI\": [0.27175248, 0.07708182], \"ArrayB\": [0.5928491], \"ArrayF\": [0.30130994, 0.60325474]}\n",
+      "SplitOn node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.59618497\n",
+      "SplitBest node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2912048\n",
+      "SplitOn node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.32809982\n",
+      "Div node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Div] = 1.00*Div, weight = 0.1448153\n",
+      "Mul node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Mul] = 1.00*Mul, weight = 0.5934199\n",
+      "Add node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Add] = 1.00*Add, weight = 0.59812796\n",
+      "Sub node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][Sub] = 1.00*Sub, weight = 0.78607696\n",
+      "SplitBest node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.7199181\n",
+      "SplitOn node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.55268025\n",
+      "Div node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.82452416\n",
+      "Mul node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 0.60206795\n",
+      "Add node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.4405351\n",
+      "Sub node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.6042208\n",
+      "SplitBest node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.34729484\n",
       "\n"
      ]
     }
@@ -425,12 +456,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If(x_0>0.50)\n",
-      "|- If(x_0>1.50)\n",
-      "|  |- If(x_0>2.50)\n",
-      "|  |  |- 8.22\n",
-      "|  |  |- 9.18\n",
-      "|  |- 5.77\n",
+      "If(x_0>=1.00)\n",
+      "|- Sub\n",
+      "|  |- 8.32\n",
+      "|  |- 0.00*x_0\n",
       "|- 9.04\n"
      ]
     }
